# fuse-tmpfs

./: .gitignore  .~lock.task-01.odt#  CMakeLists.txt  Makefile  README.md  compile_commands.json  config.status  flake.nix
include/: params.h
src/: Makefile  bbfs  bbfs.c  log.c  log.h  params.h  tmpfs.c
src/.deps/: bbfs.Po  log.Po
